--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             <div class="person">
                 <input type="text" v-model="name" />
                 <h3>{{greet()}}</h3>
-                <h3>I work as {{job}}</h3>
+                <!-- <h3>Hello, my name is {{name}}</h3> -->
+                <h3>I work as a {{job}}</h3>
             </div>
             <pre>
                 {{$data | json }}
