--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>VueJS Tutorials</title>
         <link href="main.css" rel="stylesheet" />
     </head>
     <body>
+        <div id="app">
+            <!-- <input type="text" value="Max" /> -->
+            <input type="text" :value="name" />
 
-      <div id="app">
-        <input type="text" :value="name">
-        <a :href="link">Link</a>
-        <div v-html="markup">
+            <!-- <a v-bind:href="link">Link</a> -->
+            <a :href="link">Link</a>
 
+            <!-- {{markup}} -->
+            <div v-html="markup"></div>
         </div>
-      </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
-      <script src="app.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
