--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>VueJS Tutorials</title>
         <link href="main.css" rel="stylesheet" />
     </head>
     <body>
+        <div id="app">
+            {{message.split('').reverse().join()}}
 
-      <div id="app">
-        <button @click="a++">Add to A</button>
-        <button @click="b++">Add to B</button>
-        <p>A - {{a}}</p>
-        <p>B - {{b}}</p>
-        <p>Age + A = {{addToA}}</p>
-        <p>Age + B = {{addToB}}</p>
-      </div>
+            <button @click="a++">Add to A</button>
+            <button @click="b++">Add to B</button>
+            <p>A - {{a}}</p>
+            <p>B - {{b}}</p>
+            <p>Age + A = {{addToA}}</p>
+            //розрахункові властивості- викликаються без ()
+            <p>Age + B = {{addToB}}</p>
+            //розрахункові властивості- викликаються без ()
+        </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
-      <script src="app.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
